--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-auth==2.30.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.63.1
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
