--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ openai==1.35.3
 packaging==24.1
 proto-plus==1.24.0
 protobuf==4.25.3
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.7.4
